# NormalModeAnalysis

./: README.md  pyproject.toml  run_normal_mode_analysis.py
docs/: index.html  normal_mode_analysis.html
docs/html/: gaussian_interface.html  input_nma.html  physical_constants.html  x_to_q.html
examples/: duschinsky_franck_condon_water.ipynb  example_usage.py
input_data/: r_small.chk  r_small.eps  r_small.fchk
nma_jax/: __init__.py  cli.py  constants.py  core.py  driver.py  duschinsky.py  eckart.py  io_gaussian.py  io_orca.py  molecule.py  output.py  periodic_table.py  thermo.py  thermochemistry.py  transformations.py  transforms.py  vibrational.py
normal_mode_analysis/: gaussian_interface.py  input_nma.py  normal_mode_analysis.py  physical_constants.py  x_to_q.py
paper/: paper.bib  paper.md
test/: test_normal_mode_analysis.py
tests/: conftest.py  test_basic.py  test_core.py  test_io_orca.py
