[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nma_jax"
version = "1.0.0"
description = "Normal-mode analysis with JAX - modern rewrite of a PhD-era tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Prateek Goel" },
]
keywords = ["chemistry", "vibrational analysis", "normal modes", "jax", "duschinsky", "thermochemistry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "ruff"]

[project.scripts]
nma-jax = "nma_jax.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nma_jax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RET"]
ignore = ["E501"]  # line length handled by formatter
